<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-4193581455913262/4431300764"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flDrawingViewContainer"/>

    <FrameLayout
        android:id="@+id/flDrawingViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintBottom_toTopOf="@id/llActionButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adView">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>

        <com.app.kot_drawing_app.DrawingView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF"
            android:id="@+id/drawing_view"/>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/llPaintColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/llActionButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flDrawingViewContainer">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/skin"
            android:tag="@color/skin"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/red"
            android:tag="@color/red"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/blue"
            android:tag="@color/blue"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/black"
            android:tag="@color/black"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/green"
            android:tag="@color/green"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/teal_700"
            android:tag="@color/teal_700"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/purple_500"
            android:tag="@color/purple_500"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/purple_200"
            android:tag="@color/purple_200"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/yellow"
            android:tag="@color/yellow"/>
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/white"
            android:tag="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llActionButtons"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/ibUNDO"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/undo"
            android:contentDescription="@string/undo"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"/>

        <ImageButton
            android:id="@+id/ibBrush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/brush"
            android:contentDescription="@string/brush_image"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"/>

        <ImageButton
            android:id="@+id/ibColors"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/color"
            android:contentDescription="@string/colors"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"/>

        <ImageButton
            android:id="@+id/ibGallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/gallery"
            android:contentDescription="@string/gallery_image"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"/>

        <ImageButton
            android:id="@+id/ibStorage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/storage"
            android:contentDescription="@string/save"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"/>



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>